Add shouldUpdate and state of charge (#187)
* add shouldUpdate and state of charge

* update swagger, use struct for device info response

* check for version correctly using semver

* fix log property strings for autopi registration

* lint, swag
